--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <nav id="navbar">
         <ul class="nav-list">
-            <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#work">My Work</a></li>
+            <li class="nav-item"><a class="nav-link" href="#about">About |</a></li>
+            <li class="nav-item"><a class="nav-link" href="#work">My Work |</a></li>
             <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -22,11 +22,13 @@
             <main id="welcome-section">
                 <h1 class="welcome-title">Welcome, I'm Daniel</h1>
                 <h2 class="welcome-subtitle">A Front End Web Developer</h2>
+                <p class="welcome-text">I am a front end web developer with a focus in HTML, CSS, and SEO, however I am also familiar with JavaScript, jQuery, PHP, Entity Framework, and C#. This is a basic website of some of the work and code I've done, which can be found below.
+                    I have more work on my CodePen and my GitHub.</p>
             </main>
         </section>
         <section id="work">
             <section id="projects">
-                <h2 class="projects-intro">Here is some of my work</h2>
+                <h2 class="projects-intro">My Work</h2>
                 <div class="grid-container">
                     <div class="project-tile">
                         <a class="project-link" href="https://codepen.io/HanSolo0001/pen/KKvQGdN" target="_blank"><img class="project-img" src="./img/tribute-page.png" alt="tribute page"></a>
@@ -70,7 +72,7 @@
                         <a class="profile-link" href="https://codepen.io/HanSolo0001" target="_blank"><img class="social-logo" src="./img/codepen_icon.png" alt="codepen logo">CodePen</a>
                     </div>
                     <div class="social">
-                        <a class="profile-link" href="mailto:pillarite@gmail.com" target="_blank"><img class="social-logo" src="./img/icons8-email-64.png" alt="email me">Email Me</a>
+                        <a class="profile-link" href="mailto:danielh.webdev@gmail.com" target="_blank"><img class="social-logo" src="./img/icons8-email-64.png" alt="email me">Email Me</a>
                     </div>
                 </div>
                 <p class="footer-copyright">&copy; 2024 -
