--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                 </div>
                 <p class="footer-copyright">&copy; 2024 -
                     <script>
-                        document.write(new Date().getFullYear())
+                        document.addEventListener('DOMContentLoaded', function() {
+                            document.getElementById('current-year').textContent = new Date().getFullYear();
+                        });
                     </script>
                     All Rights Reserved</p>
             </footer>
