added the span id for the current year

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         <a class="profile-link" href="mailto:danielh.webdev@gmail.com" target="_blank"><img class="social-logo" src="./img/icons8-email-64.png" alt="email me">Email Me</a>
                     </div>
                 </div>
-                <p class="footer-copyright">&copy; 2024 -
+                <p class="footer-copyright">&copy; 2024 - <span id="current-year"></span>
                     <script>
                         document.addEventListener('DOMContentLoaded', function() {
                             document.getElementById('current-year').textContent = new Date().getFullYear();
