added lukes library publishing house to my work section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
                         <h3 class="project-title">Bullitt County Authors Fair Website</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://www.lukeslibraryph.com/" target="_blank"><img class="project-img" src="./img/lukeslibraryph-page.png" alt="bullitt county authors fair website"></a>
+                        <h3 class="project-title">Luke's Library Publishing House</h3>
+                    </div>
+                    <div class="project-tile">
                         <a class="project-link" href="https://codepen.io/HanSolo0001/pen/bGrNKLG" target="_blank"><img class="project-img" src="./img/21-day-final-challenge-page.png" alt="21 day final challenge with Kevin Powell"></a>
                         <h3 class="project-title">Day 21 Final Challenge Kevin Powell</h3>
                     </div>
