Added justin trigila website and adjusted alt img text for lukeslibraryph

--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
                         <h3 class="project-title">Technical Documentation Page</h3>
                     </div>
                     <div class="project-tile">
+                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/bGrNKLG" target="_blank"><img class="project-img" src="./img/21-day-final-challenge-page.png" alt="21 day final challenge with Kevin Powell"></a>
+                        <h3 class="project-title">Day 21 Final Challenge Kevin Powell</h3>
+                    </div>
+                    <div class="project-tile">
                         <a class="project-link" href="https://lpstories.com/index.html" target="_blank"><img class="project-img" src="./img/lpstories-page.png" alt="lpstories website"></a>
                         <h3 class="project-title">LPSTORIES Website</h3>
                     </div>
@@ -55,12 +59,12 @@
                         <h3 class="project-title">Bullitt County Authors Fair Website</h3>
                     </div>
                     <div class="project-tile">
-                        <a class="project-link" href="https://www.lukeslibraryph.com/" target="_blank"><img class="project-img" src="./img/lukeslibraryph-page.png" alt="bullitt county authors fair website"></a>
+                        <a class="project-link" href="https://www.lukeslibraryph.com/" target="_blank"><img class="project-img" src="./img/lukeslibraryph-page.png" alt="luke's library publishing house website"></a>
                         <h3 class="project-title">Luke's Library Publishing House</h3>
                     </div>
                     <div class="project-tile">
-                        <a class="project-link" href="https://codepen.io/HanSolo0001/pen/bGrNKLG" target="_blank"><img class="project-img" src="./img/21-day-final-challenge-page.png" alt="21 day final challenge with Kevin Powell"></a>
-                        <h3 class="project-title">Day 21 Final Challenge Kevin Powell</h3>
+                        <a class="project-link" href="https://justintrigila.com/" target="_blank"><img class="project-img" src="./img/justin-trigila-page.png" alt="justin trigila website"></a>
+                        <h3 class="project-title">Justin Trigila</h3>
                     </div>
                 </div>
             </section>
