--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
                     </div>
                     <div class="project-tile">
                         <a class="project-link" href="https://www.lukeslibraryph.com/" target="_blank"><img class="project-img" src="./img/lukeslibraryph-page.png" alt="luke's library publishing house website"></a>
-                        <h3 class="project-title">Luke's Library Publishing House</h3>
+                        <h3 class="project-title">Luke's Library Publishing House Website</h3>
                     </div>
                     <div class="project-tile">
                         <a class="project-link" href="https://justintrigila.com/" target="_blank"><img class="project-img" src="./img/justin-trigila-page.png" alt="justin trigila website"></a>
-                        <h3 class="project-title">Justin Trigila</h3>
+                        <h3 class="project-title">Justin Trigila Website</h3>
                     </div>
                 </div>
             </section>
