Updated the welcome text to reflect web master qualities as well

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <main id="welcome-section">
                 <h1 class="welcome-title">Welcome, I'm Daniel</h1>
                 <h2 class="welcome-subtitle">A Front End Web Developer</h2>
-                <p class="welcome-text">I am a front end web developer with a focus in HTML, CSS, and SEO, however I am also familiar with JavaScript, jQuery, PHP, Entity Framework, and C#. This is a basic website of some of the work and code I've done, which can be found below.
-                    I have more work on my CodePen and my GitHub.</p>
+                <p class="welcome-text">I am a front end web developer/web master with a focus in HTML, CSS, and SEO, however I am also familiar with JavaScript, WordPress, jQuery, PHP, Entity Framework, C#, DNS, Web Management, Web Dev Tools, Brevo, FormSubmit/Web3Forms, and
+                    etc. This is a basic website of some of the work and code I've done, which can be found below. I have more work on my CodePen and my GitHub, which can be found in the social links below in the <a href="#contact">Contact</a> section.</p>
             </main>
         </section>
         <section id="work">
